--- a/style.css
+++ b/style.css
@@ -11,13 +11,12 @@ body {
 
 #game-board {
     display: grid;
-    grid-template-columns: repeat(3, 8px);
-    grid-template-rows: repeat(4, 8px);
     grid-gap: 1px;
-    background-color: black;
-    border: 1px solid black;
+    background-color: #cccccc;
+    border: 1px solid #cccccc;
 }
 
 #game-board div {
     background-color: white;
+    font-size: 10px;
 }
